examples/test/testpolicy2314.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2314
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key8: value26
      key5: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value19
          key19: value41
          key10: value36
      podSelector:
        matchLabels:
          key7: value0
          key35: value28
          key23: value46
